--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,6 +129,39 @@
   transform: scale(0);
 }
 
+.end-header .menu-nav li.has-dropdown .menu-home.menu-dropdown {
+  min-width: 600px;
+  padding: 20px;
+}
+
+.end-header .menu-nav li.has-dropdown .menu-home.menu-dropdown::after {
+  left: 3%;
+}
+
+
+.end-header .menu-nav li.has-dropdown .menu-home.menu-dropdown .menu-home-item {
+  padding: 5px 0px;
+  color: #484848;
+}
+
+.end-header .menu-nav li.has-dropdown .menu-home.menu-dropdown .menu-home-item:hover {
+  color: #d01498;
+}
+
+
+.end-header .menu-nav li.has-dropdown .mt-categories {
+  min-width: 900px;
+  padding-bottom: 30px;
+}
+
+.end-header .menu-nav li.has-dropdown .mt-categories.menu-dropdown::after {
+  left: 3%;
+}
+
+.end-header .menu-nav li.has-dropdown .mt-categories .mt-single-category-wrap a img {
+  max-width: 60%;
+}
+
 .end-header .menu-nav li.has-dropdown .menu-dropdown::after {
   content: "";
   width: 0px;
@@ -859,7 +892,7 @@
   line-height: 1.4;
 }
 
-.vc-trending-collectors .mt-categories .mt-single-category-wrap {
+.mt-categories .mt-single-category-wrap {
   display: inline-flex;
   align-items: center;
   flex-direction: row;
@@ -872,7 +905,7 @@
   margin-top: 30px;
 }
 
-.vc-trending-collectors .mt-categories .mt-single-category-wrap a img {
+.mt-categories .mt-single-category-wrap a img {
   transform: translateY(0);
   margin-right: 20px;
   border-radius: 50%;
@@ -881,23 +914,16 @@
   padding: 25px 0px;
 }
 
-.vc-trending-collectors .mt-categories .mt-single-category-wrap:hover a img {
+.mt-categories .mt-single-category-wrap:hover a img {
   transform: translateY(-3px);
 }
 
-.vc-trending-collectors
-  .mt-categories
-  .mt-single-category-wrap
-  .mt-single-category-info {
+.mt-categories .mt-single-category-wrap .mt-single-category-info {
   display: flow-root;
   width: 60%;
 }
 
-.vc-trending-collectors
-  .mt-categories
-  .mt-single-category-wrap
-  .mt-single-category-info
-  a {
+.mt-categories .mt-single-category-wrap .mt-single-category-info a {
   display: -webkit-box;
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
@@ -909,30 +935,19 @@
   transition: 0.3s;
 }
 
-.vc-trending-collectors
-  .mt-categories
-  .mt-single-category-wrap
-  .mt-single-category-info
-  a:hover {
+.mt-categories .mt-single-category-wrap .mt-single-category-info a:hover {
   color: #d01498;
   cursor: pointer;
 }
 
-.vc-trending-collectors
-  .mt-categories
-  .mt-single-category-wrap
-  .mt-single-category-info
-  span {
+.mt-categories .mt-single-category-wrap .mt-single-category-info span {
   width: 100%;
   float: left;
   font-size: 14px;
   color: #666;
 }
 
-.vc-trending-collectors
-  .mt-categories
-  .mt-single-category-wrap
-  .mt-count-number {
+.mt-categories .mt-single-category-wrap .mt-count-number {
   color: #f0f0f0;
   font-size: 40px;
   font-weight: 600;
@@ -1023,24 +1038,97 @@
   display: flex;
 }
 
-.slick-prev:before {
-  content: "<";
-  color: red;
-  font-size: 30px;
+.vc-trending-collection {
+  position: relative;
 }
 
-.slick-next:before {
-  content: ">";
-  color: red;
-  font-size: 30px;
+.vc-trending-collection .slick-collection-btn- {
+  position: absolute;
+  z-index: 10;
+  top: 60%;
+  transform: translateY(-60%);
 }
 
+.vc-trending-collection .slick-collection-btn-- {
+  position: absolute;
+  z-index: 10;
+  top: 60%;
+  transform: translateY(-60%);
+  right: 17.5%;
+}
 
+.vc-trending-collection .slick-collection-btn- .collection-btn-prev,
+.collection-btn-next {
+  background-color: #fff;
+  border-radius: 50px;
+  box-shadow: 0 0 10px 0 rgb(0 0 0 / 10%);
+  color: #1a1a1a;
+  width: 34px;
+  height: 34px;
+  font-size: 13px;
+  border: none;
+}
 
 /* end trending collection   */
 
+/* animation */
+.css-2yud30 {
+  animation-duration: 900ms;
+  animation-timing-function: ease;
+  animation-delay: 300ms;
+  animation-name: animation-tx4hyv;
+  animation-direction: normal;
+  animation-fill-mode: both;
+  animation-iteration-count: 1;
+}
+
+.css-2yud60 {
+  animation-duration: 900ms;
+  animation-timing-function: ease;
+  animation-delay: 600ms;
+  animation-name: animation-tx4hyv;
+  animation-direction: normal;
+  animation-fill-mode: both;
+  animation-iteration-count: 1;
+}
+
+.css-2yud80 {
+  animation-duration: 900ms;
+  animation-timing-function: ease;
+  animation-delay: 800ms;
+  animation-name: animation-tx4hyv;
+  animation-direction: normal;
+  animation-fill-mode: both;
+  animation-iteration-count: 1;
+}
+
+.css-2yud90 {
+  animation-duration: 900ms;
+  animation-timing-function: ease;
+  animation-delay: 300ms;
+  animation-name: animation-tx4hyv;
+  animation-direction: normal;
+  animation-fill-mode: both;
+  animation-iteration-count: 1;
+}
+
+@keyframes animation-tx4hyv {
+  0% {
+    transform: translateY(40%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0%);
+    opacity: 1;
+  }
+}
+/* animation */
+
 /* media screen */
 @media only screen and (max-width: 1400px) {
+  .vc-trending-collection .slick-collection-btn-- {
+    right: 12%;
+  }
 }
 
 @media only screen and (max-width: 1200px) {
@@ -1052,6 +1140,7 @@
     padding: 18px 0;
   }
 }
+
 @media only screen and (max-width: 1024px) {
   .entry-content .wpb_wrapper h2 {
     font-size: 26px;
@@ -1063,6 +1152,9 @@
 
   .vc-hottest-bids .vs-tabs-list .vs-tabs {
     margin-top: 10px;
+  }
+  .vc-trending-collection .slick-collection-btn-- {
+    right: 7%;
   }
 }
 
@@ -1099,6 +1191,9 @@
 @media only screen and (max-width: 576px) {
   .vc-trending-collection .swipper-slide {
     margin-right: 0px;
+  }
+  .vc-trending-collection .slick-collection-btn-- {
+    right: 4%;
   }
 }
 
